objects/L2I_System_Alert__c.object
<CustomObject>
    <description>A custom object that can be used to store system alerts, which upon creation will notify designated email addresses or perhaps post to slack channel etc.</description>
    <fields>
        <fullName>Alert_Code__c</fullName>
        <description>A compound key unique identifier. This will be a concatenation of Alert_Type__c and Timestamp__c .</description>
        <externalId>true</externalId>
        <label>Alert Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <label>Alert Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connection Timeout</fullName>
                </value>
                <value>
                    <fullName>Invalid Value for Setting</fullName>
                </value>
                <value>
                    <fullName>Missing Custom Metadata Type</fullName>
                </value>
                <value>
                    <fullName>Missing Custom Setting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Batch Job Exception</fullName>
                </value>
                <value>
                    <fullName>Callout Exception</fullName>
                </value>
                <value>
                    <fullName>Internal Server Error</fullName>
                </value>
                <value>
                    <fullName>JSON Parsing Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message associated with the Alert</description>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Recipients__c</fullName>
        <label>Notification Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to indicate if notification email has been sent for this alert.</description>
        <label>Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Ids__c</fullName>
        <label>Object Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Alerts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>Timestamp is stored as YYYYMMDDhhmm note that the mm part will be rounded off to 00, 15, 30 or 45 so that at most only 4 records per hour will be stored. This is to prevent the email inbox of alert recipients from getting flooded with messages.</description>
        <label>Timestamp</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>System Alert</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>System Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>